Minor Fixes to Formatting, and some extra
- Changed menu-icon  margins and padding so that it wont push itself out of the parent element's boarder

- started work on the formating of the #about section

- defined unused variables in the about.css file

- added some new terms to the keywords meta section

-added useless line of code to the button.js file

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <meta name="description" content="A Creative Student's Portfolio">
   <meta name="keywords" content="web design, affordable web design, professional web design,
     responsive web design, front-end developer portfolio, professional web developer portfolio,
-    student web developer portfolio">
+    student web developer portfolio, game developer, student portfolio, unity game engine">
 
   <!-- TITLE -->
   <title>Seth T. Tal | Portfolio</title>
