Code Cleanup and Simple animation integration
- added quick sliding animation to the information button on landing page

- cleaned up code in header.css and index.html

- other minor changes

--- a/index.html
+++ b/index.html
@@ -8,12 +8,14 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
+
   <!-- SEO -->
   <meta name="author" content="Seth T. Tal">
   <meta name="description" content="A Creative Student's Portfolio">
   <meta name="keywords" content="web design, affordable web design, professional web design,
     responsive web design, front-end developer portfolio, professional web developer portfolio,
     student web developer portfolio, game developer, student portfolio, unity game engine">
+
 
   <!-- TITLE -->
   <title>Seth T. Tal | Portfolio</title>
@@ -30,6 +32,7 @@
   <!-- JS File Links -->
   <script src="./js/button.js" charset="utf-8"></script>
 
+
   <!-- COLORS -->
   <!-- Gainsboro:                #DCDCDD -->
   <!-- Lavender Grey:            #C5C3C6 -->
@@ -43,6 +46,7 @@
 
   <body>
     <div class="container">
+
 
       <!-- HEADER -->
       <header id="header" class="header">
@@ -63,14 +67,15 @@
           <nav id="menu-nav" class="nav">
             <div id="menu-close" class="menuClose" onclick="closeNav()">&times;</div>
             <ul id="nav-menu-ul">
-              <li class="menuButton" ><a class="pageLink" href="#about">About</a></li>
-              <li class="menuButton" ><a class="pageLink" href="#projects">Projects</a></li>
-              <li class="menuButton" ><a class="pageLink" href="#footer">Contact</a></li>
+              <li class="menuButton"><a class="pageLink" href="#about">About</a></li>
+              <li class="menuButton"><a class="pageLink" href="./projects.html">Projects</a></li>
+              <li class="menuButton"><a class="pageLink" href="#footer">Contact</a></li>
             </ul>
           </nav>
 
         </div> <!-- Header Container End -->
       </header>
+
 
       <!-- ABOUT -->
       <div id="about" class="about">
@@ -91,10 +96,15 @@
         </div>
 
       </div>
-      <!-- PROJECTS -->
+
+
+      <!-- No longer the project section, will probaly be an integrated pdf viewer for my resume?? -->
       <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quae architecto aspernatur aliquid illum, culpa tempora labore officia deserunt? Ab aliquam, nostrum harum officia fuga quidem eos consectetur! Veniam, minima, dolor. Consequuntur numquam pariatur, dicta! Quis sequi, odio dolor illum harum vitae suscipit iusto velit molestiae deleniti quod quae, molestias doloremque debitis laborum. Commodi temporibus voluptatum, hic vitae libero, itaque soluta at corporis officiis necessitatibus ducimus ipsam tempora aliquid repellendus consectetur deleniti recusandae quisquam neque eaque veniam, maiores. Totam nemo deleniti odio tempore, ipsam illo molestias vitae at, ab quis molestiae dolorum cum quibusdam beatae sequi praesentium tempora architecto nostrum dicta vel nihil. Possimus rerum, soluta iure voluptate autem neque sequi consequatur alias. A sit animi cum eveniet doloremque ullam aut, ipsa, magnam totam mollitia fugiat, quidem blanditiis necessitatibus natus ducimus maxime minima. Repellendus voluptatum unde amet voluptates consequuntur aperiam deleniti facere magnam perspiciatis, doloremque maiores earum, veritatis nihil illo. Quia, necessitatibus aliquam? Quis modi quaerat debitis tenetur at similique incidunt perferendis dolor eum, eius, adipisci voluptates perspiciatis sunt obcaecati natus consectetur! Vitae tenetur, repellat quos. Minima nam voluptate error ea minus, consequatur optio quasi omnis odio rem odit vel nemo fuga maxime perspiciatis quisquam dicta. Reprehenderit amet praesentium ipsum atque sapiente. Quidem voluptatem doloribus, dicta deserunt harum aliquid vitae tempora, omnis, magnam pariatur obcaecati hic. Optio, nesciunt. Dolore, voluptatem nesciunt.</p>
-      <!-- CONTACT -->
+
+
+      <!-- CONTACT section?? -->
       <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ducimus neque assumenda eaque, porro quam facilis vero, impedit ad nesciunt earum eos voluptatem nostrum fuga. Quasi maxime, animi deserunt dignissimos! Illum ipsum explicabo, neque quos! Dolores id, laudantium eum, consequatur cumque vitae veniam deserunt quos maiores maxime modi accusantium natus alias.</p>
+
 
       <!-- FOOTER -->
       <footer id="footer" class="footer">
@@ -110,7 +120,8 @@
         </div> <!-- Footer Container End -->
       </footer>
 
-    </div> <!-- MAIN CONTAINER CLOSE -->
+
+    </div> <!-- Main Container End -->
   </body>
 
 </html>
