Replaced the table in about section
Replaced the table with a scaleable custom div-table.

work in progress...

--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
   <link href="https://fonts.googleapis.com/css?family=Poiret One" rel="stylesheet">
   <link rel="stylesheet" href="./css/footer.css">
   <link rel="stylesheet" href="./css/about.css">
+  <link rel="stylesheet" href="./css/skills.css">
 
   <!-- JS File Links -->
   <!-- <script src="./js/main.js" charset="utf-8"></script> -->
@@ -86,50 +87,85 @@
         </div>
 
         <div id="profile-text">
-          <table>
+
+          <div id="table-container">
+
+            <div id="table-head" class="tableHead">table head cell</div>
+            <div id="table-head" class="tableHead">table head cell</div>
+            <div id="table-head" class="tableHead">table head cell</div>
+            <div id="table-head" class="tableHead">table head cell</div>
+            <div id="table-head" class="tableHead">table head cell</div>
+
+            <div id="table-cell" class="tableCell">Cell Row 1</div>
+            <div id="table-cell" class="tableCell">Cell Row 1</div>
+            <div id="table-cell" class="tableCell">Cell Row 1</div>
+            <div id="table-cell" class="tableCell">Cell Row 1</div>
+            <div id="table-cell" class="tableCell">Cell Row 1</div>
+
+            <div id="table-cell" class="tableCell">Cell Row 2</div>
+            <div id="table-cell" class="tableCell">Cell Row 2</div>
+            <div id="table-cell" class="tableCell">Cell Row 2</div>
+            <div id="table-cell" class="tableCell">Cell Row 2</div>
+            <div id="table-cell" class="tableCell">Cell Row 2</div>
+
+            <div id="table-cell" class="tableCell">Cell Row 3</div>
+            <div id="table-cell" class="tableCell">Cell Row 3</div>
+            <div id="table-cell" class="tableCell">Cell Row 3</div>
+            <div id="table-cell" class="tableCell">Cell Row 3</div>
+            <div id="table-cell" class="tableCell">Cell Row 3</div>
+
+            <div id="table-cell" class="tableCell">Cell Row 4</div>
+            <div id="table-cell" class="tableCell">Cell Row 4</div>
+            <div id="table-cell" class="tableCell">Cell Row 4</div>
+            <div id="table-cell" class="tableCell">Cell Row 4</div>
+            <div id="table-cell" class="tableCell">Cell Row 4</div>
+
+          </div>
+
+          <!-- <table>
             <tr>
               <th>Proficiency</th>
               <th>Languages</th>
-              <!-- <th>Engines</th>
+              <th>Engines</th>
               <th>Tools</th>
-              <th>Fields</th> -->
+              <th>Fields</th>
             </tr>
             <tr>
               <td class="proficiency"><span id="proficiency">1</span></td>
               <td>Python</td>
-              <!-- <td></td>
               <td></td>
-              <td>Scripting</td> -->
+              <td></td>
+              <td>Scripting</td>
             </tr>
             <tr>
               <td class="proficiency"><span id="proficiency">2</span></td>
               <td>C</td>
-              <!-- <td></td>
               <td></td>
-              <td>Scripting</td> -->
+              <td></td>
+              <td>Scripting</td>
             </tr>
             <tr>
               <td class="proficiency"><span id="proficiency">3</span></td>
               <td>HTML5</td>
-              <!-- <td></td>
               <td></td>
-              <td>WebDev</td> -->
+              <td></td>
+              <td>WebDev</td>
             </tr>
             <tr>
               <td class="proficiency"><span id="proficiency">4</span></td>
               <td>CSS3</td>
-              <!-- <td></td>
               <td></td>
-              <td>WebDev</td> -->
+              <td></td>
+              <td>WebDev</td>
             </tr>
             <tr>
               <td class="proficiency"><span id="proficiency">5</span></td>
               <td>JavaScript</td>
-              <!-- <td></td>
               <td></td>
-              <td>WebDev</td> -->
+              <td></td>
+              <td>WebDev</td>
             </tr>
-          </table>
+          </table> -->
         </div>
 
         <h1 id="projects-link">Projects</h1>
@@ -172,7 +208,7 @@
 
     <div id="links">
       <a href="https://github.com/Sephta">GitHub</a>
-      <a href="linkedIn">LinkedIn</a>
+      <a href="testHub.html">LinkedIn</a>
       <a href="https://twitter.com/seth_tal">Twitter</a>
     </div>
   </div>
