Replaced Navigation Arrow
Replaced the navigation arrow on the landing page with a WIP custom arrow with WIP animation.

Originally the arrow was literally the letter V

--- a/index.html
+++ b/index.html
@@ -68,9 +68,14 @@
           Built to be intuitive and engaging.
         </h2>
 
+        <!-- Custom interactive nav arrow from scratch -->
+        <a href="#about-container">
         <div id="about-button", class="aboutButton">
-          <a href="#about-container">V</a>
+          <div id="na-1" class="navArrow"></div>
+          <div id="na-2" class="navArrow"></div>
         </div>
+        </a>
+
       </div>
 
     </div> <!-- end of Header Container -->
