changed link to linkedin
now it actually links to my linkedin...

--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
 
     <div id="links">
       <a href="https://github.com/Sephta">GitHub</a>
-      <a href="testHub.html">LinkedIn</a>
+      <a href="https://www.linkedin.com/in/seth-tal-98883a18b/">LinkedIn</a>
       <a href="https://twitter.com/seth_tal">Twitter</a>
     </div>
   </div>
