--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 						<div id="profile-container" class="container">
 							<div id="profile-img-container">
 								<div id="profile-img-background">
-									<img id="profile-img" src="./imgs/profile_square.PNG" alt="">
+									<img id="profile-img" src="./imgs/profile_square.png" alt="">
 									<h1 id="title">Seth T. Tal</h1>
 								</div>
 							</div>
