still fixing weird github related issues...

--- a/projects.html
+++ b/projects.html
@@ -65,7 +65,7 @@
 		<div id="projects-container" class="container">
 			<div class="project-card">
 				<a href="./projects/PongJS/pong.html">
-					<img src="./imgs/pongJS_clone.png" alt="">
+					<img src="./imgs/pongJS_clone.PNG" alt="">
 					<div class="text-container">
 						<h1>Pong Clone</h1>
 						<p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Labore cumque nostrum dicta consectetur perferendis debitis amet quae sequi aperiam, placeat, a laudantium repellendus eum. Commodi doloribus dolorum vitae maxime nihil pariatur quaerat expedita ex autem!</p>
