changed href link for resume

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 
 						<!-- Nav Bar -->
 						<div id="nav-container" class="navContainer">
-							<div id="nav-resume" class="navItem"><a href="./resume/resume.pdf">Resume</a></div>
+							<div id="nav-resume" class="navItem"><a href="./resume/SethTal_Resume.pdf">Resume</a></div>
 							<div id="nav-projects" class="navItem"><a href="./projects.html">Projects</a></div>
 							<div id="nav-contact" class="navItem"><a href="#">Contact</a></div>
 						</div>
