--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 						<div id="profile-container" class="container">
 							<div id="profile-img-container">
 								<div id="profile-img-background">
-									<img id="profile-img" src="./imgs/profile.png" alt="">
+									<img id="profile-img" src="./imgs/profile.PNG" alt="">
 									<h1 id="title">Seth Tal</h1>
 								</div>
 							</div>
