Adding links to personal project section on main page
- also worked on styling of the project elements

--- a/index.html
+++ b/index.html
@@ -82,56 +82,79 @@
 										<img src="./imgs/twitter.svg" alt="">
 									</div> -->
 									<div id="list-header">
-										<h1>Current Projects</h1>
-										<!-- <h2>by Me</h2> -->
+										<h1>Personal Projects</h1>
 									</div>
 									<div class="parent-container" id="projects">
 										<!-- Scalable project cards with hover overlay -->
-										<div id="project">
-											<a href="#">
+										<div class="project">
+											<a href="https://sephta.itch.io/mix-and-game-jam-submission">
+												<img src="./imgs/MixAndGameJam_CoverImage.png" alt="hello world">
+												<div class="middle">
+													<div class="text">
+														<h3 class="text-alignment-center text-pad-bottom">Firearm Shuffle</h3> <hr> <br>
+														<span><p>Submission to the Mix and Game Jam</p></span> <br>
+														<span class="text-highlight">Nov 2020</span>
+													</div>
+												</div>
+											</a>
+										</div>
+										<div class="project">
+											<a href="https://sephta.itch.io/project-evermorn">
 												<img src="./imgs/Project_EverMorn.png" alt="hello world">
-												<div class="middle" id="pl-center-item">
-													<div id="text">3D Action RPG</div>
+												<div class="middle">
+													<div class="text">
+														<h3 class="text-alignment-center text-pad-bottom">3D Action RPG </h3> <hr> <br>
+														<span><p>School project @ University of Oregon</p></span> <br>
+														<span class="text-highlight">Apr 2020</span>
+													</div>
 												</div>
 											</a>
 										</div>
-										<div id="project">
-											<a href="#">
-												<img src="./imgs/workInProgress.png" alt="hello world">
-												<div class="middle" id="pl-center-item">
-													<div id="text">Project: Pocket Rancher</div>
+										<div class="project">
+											<a href="https://github.com/Sephta/Sephta.github.io">
+												<img src="./imgs/profile.PNG" alt="hello world">
+												<div class="middle">
+													<div class="text">
+														<h3 class="text-alignment-center text-pad-bottom">Website Source Code</h3> <hr>	<br>
+														<span><p>Source code for this website is public and available on my github.</p></span> <br>
+														<span class="text-highlight">Dec 2019</span>
+													</div>
 												</div>
 											</a>
 										</div>
-										<div id="project">
-											<a href="#">
-												<img src="./imgs/workInProgress.png" alt="hello world">
-												<div class="middle" id="pl-center-item">
-													<div id="text">Portfolio Website</div>
+										<div class="project">
+											<a href="https://sephta.itch.io/coalescence-battle-system-ld47">
+												<img src="./imgs/Coalescence_BS_CoverImage_5x4_aspect.png" alt="hello world">
+												<div class="middle">
+													<div class="text">
+														<h3 class="text-alignment-center text-pad-bottom">Coalescence: <br> Battle System</h3> <hr> <br>
+														<span><p>Submission to the Ludum Dare 47 Game Jam.</p></span> <br>
+														<span class="text-highlight">Oct 2020</span>
+													</div>
 												</div>
 											</a>
 										</div>
-										<div id="project">
-											<a href="#">
-												<img src="./imgs/workInProgress.png" alt="hello world">
-												<div class="middle" id="pl-center-item">
-													<div id="text">[WIP]</div>
+										<div class="project">
+											<a href="https://sephta.itch.io/coalescence">
+												<img src="./imgs/Coalescence_CoverImage_5x4_aspect.png" alt="hello world">
+												<div class="middle">
+													<div class="text">
+														<h3 class="text-alignment-center text-pad-bottom">Coalescence</h3> <hr> <br>
+														<span><p>Submission to the Vimjam Game Jam.</p></span> <br>
+														<span class="text-highlight">Sept 2020</span>
+													</div>
 												</div>
 											</a>
 										</div>
-										<div id="project">
+										<div class="project">
 											<a href="#">
-												<img src="./imgs/workInProgress.png" alt="hello world">
-												<div class="middle" id="pl-center-item">
-													<div id="text">[WIP]</div>
-												</div>
-											</a>
-										</div>
-										<div id="project">
-											<a href="#">
-												<img src="./imgs/workInProgress.png" alt="hello world">
-												<div class="middle" id="pl-center-item">
-													<div id="text">[WIP]</div>
+												<img src="./imgs/Coming-Soon-Text.png" alt="hello world">
+												<div class="middle">
+													<div class="text">
+														<h3 class="text-alignment-center text-pad-bottom">Work in Progress</h3> <hr> <br>
+														<span> <p>This will soon link to another project I am working on.</p> </span> <br>
+														<span class="text-highlight">TBD</span>
+													</div>
 												</div>
 											</a>
 										</div>
