--- a/projects.html
+++ b/projects.html
@@ -57,7 +57,7 @@
 
 		<!-- Nav Bar -->
 		<div id="nav-container" class="navContainer">
-			<div id="nav-resume" class="navItem"><a href="./resume/resume.pdf">Resume</a></div>
+			<div id="nav-resume" class="navItem"><a href="./resume/SethTal_Resume.pdf">Resume</a></div>
 			<div id="nav-home" class="navItem"><a href="./index.html">Home</a></div>
 			<div id="nav-contact" class="navItem"><a href="#">Contact</a></div>
 		</div>
