--- a/index.html
+++ b/index.html
@@ -59,8 +59,8 @@
 
 						<!-- Nav Bar -->
 						<div id="nav-container" class="navContainer">
-							<div id="nav-resume" class="navItem"><a href="./resume/SethTal_Resume.pdf">Resume</a></div>
-							<div id="nav-projects" class="navItem"><a href="./projects.html">Projects</a></div>
+							<div id="nav-resume" class="navItem"><a href="#">Resume</a></div>
+							<div id="nav-projects" class="navItem"><a href="#">Projects</a></div>
 							<div id="nav-contact" class="navItem"><a href="#">Contact</a></div>
 						</div>
 						
