--- a/index.html
+++ b/index.html
@@ -189,5 +189,16 @@
 
 		<!-- JS File Links -->
 		<script src="./js/main.js" charset="utf-8"></script>
+		<!-- Google Analytics -->
+		<script>
+			(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+			(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+			m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+			})(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+			
+			ga('create', 'G-S56YJL0KFW', 'auto');
+			ga('send', 'pageview');
+		</script>
+		<!-- End Google Analytics -->
 </body>
 </html>
