Put some work into making the layout mobile friendly

--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
 	<link rel="stylesheet" href="./css/main.css">
 	<link rel="stylesheet" href="./css/about.css">
 	<link rel="stylesheet" href="./css/scrollbar.css">
+	<link rel="stylesheet" href="./css/mobile.css">
 	<link href="https://fonts.googleapis.com/css?family=Noto Sans" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Poiret One" rel="stylesheet">
 	<!-- <link rel="stylesheet" href="./css/footer.css"> -->
@@ -66,10 +67,10 @@
 						<div class="drop-down-container">
 							<div class="drop-down-menu" id="contact-info">
 								<ul>
-									<li class="contact-item"><a href="mailto: seth.tal255@gmail.com">Seth.tal255@gmail.com</a></li>
-									<li class="contact-item"><a href="#">(###) - ### - ####</a></li>
-									<li class="contact-item"><a href="https://github.com/Sephta">My Github</a></li>
-									<li class="contact-item"><a href="#">Eugene, OR</a></li>
+									<li class="contact-item" id="ci1"><a href="mailto: seth.tal255@gmail.com">Seth.tal255@gmail.com</a></li>
+									<li class="contact-item" id="ci2"><a href="#">(###) - ### - ####</a></li>
+									<li class="contact-item" id="ci3"><a href="https://github.com/Sephta">My Github</a></li>
+									<li class="contact-item" id="ci4"><a href="#">Eugene, OR</a></li>
 								</ul>
 							</div>
 						</div>
