some work on resume.html

--- a/resume/resume.html
+++ b/resume/resume.html
@@ -38,7 +38,8 @@
                 <h2>Undergrad Computer Science student at the University of Oregon</h2>
                 <h3>Strong passion for Software Engineering, and Game Development. A student with experience in System Design, Web Development, and the Unity Game Engine.</h3>
             </div>
-            <div class="container" id="header-contact-info">
+            <img id="profile-img" src="../imgs/profile.PNG" alt="profile picture">
+            <!-- <div class="container" id="header-contact-info">
                 <ul id="contact-info">
                     <li class="contact-info-item"><a href="mailto: seth.tal255@gmail.com">Seth.tal255@gmail.com</a></li>
                     <li class="contact-info-item"><a href="#">(###) ### 1255</a></li>
@@ -46,7 +47,7 @@
                     <li class="contact-info-item"><a href="https://github.com/Sephta">github.com/Sephta</a></li>
                     <li class="contact-info-item"><a href="https://sephta.github.io">sephta.github.io</a></li>
                 </ul>
-            </div>
+            </div> -->
         </div>
         
         <!-- Content -->
