replaced website source code project image

--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
 									</div>
 									<div class="project">
 										<a href="https://github.com/Sephta/Sephta.github.io">
-											<img src="./imgs/profile.PNG" alt="hello world">
+											<img src="./imgs/HTML-image.png" alt="hello world">
 											<div class="middle">
 												<div class="text">
 													<h3 class="text-alignment-center text-pad-bottom">Website Source Code</h3> <hr>	<br>
