--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 					<!-- Nav Bar -->
 					<div id="nav-container" class="navContainer">
 						<div id="nav-resume" class="navItem"><a href="./resume/stal_resume_03.03.21.pdf">Resume</a></div>
-						<div id="nav-projects" class="navItem"><a href="#">Projects</a></div>
+						<div id="nav-projects" class="navItem"><a href="#">{ W.I.P. }</a></div>
 						<div id="nav-contact" class="navItem" onclick="openContactInfo()"><a href="#">Contact</a></div>
 						
 						<!-- Contact Info drop-down menu -->
