--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 					<!-- Nav Bar -->
 					<div id="nav-container" class="navContainer">
 						<div id="nav-resume" class="navItem"><a href="./resume/stal_resume_03.03.21.pdf">Resume</a></div>
-						<div id="nav-projects" class="navItem"><a href="#">{ W.I.P. }</a></div>
+						<div id="nav-projects" class="navItem"><a href="https://github.com/Sephta">My GitHub</a></div>
 						<div id="nav-contact" class="navItem" onclick="openContactInfo()"><a href="#">Contact</a></div>
 						
 						<!-- Contact Info drop-down menu -->
@@ -69,7 +69,7 @@
 								<ul>
 									<li class="contact-item" id="ci1"><a href="mailto: seth.tal255@gmail.com">Seth.tal255@gmail.com</a></li>
 									<li class="contact-item" id="ci2"><a href="#">(###) - ### - ####</a></li>
-									<li class="contact-item" id="ci3"><a href="https://github.com/Sephta">My Github</a></li>
+									<!-- <li class="contact-item" id="ci3"><a href="https://github.com/Sephta">My Github</a></li> -->
 									<li class="contact-item" id="ci4"><a href="#">Eugene, OR</a></li>
 								</ul>
 							</div>
