--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
 								</div> -->
 
 								<div id="list-header">
-									<h1>Personal Projects</h1>
+									<h1>Projects / Experience</h1>
 								</div>
 
 								<div class="parent-container" id="projects">
@@ -105,43 +105,43 @@
 												<div class="text">
 													<h3 class="text-alignment-center text-pad-bottom">Firearm Shuffle</h3> <hr> <br>
 													<span><p>Submission to the Mix and Game Jam</p></span> <br>
-													<span class="text-highlight">Nov 2020</span>
+													<span class="text-highlight">Nov 2020, Unity + C#</span>
 												</div>
 											</div>
 										</a>
 									</div>
-									<div class="project">
-										<a href="https://sephta.itch.io/coalescence-battle-system-ld47">
-											<img src="./imgs/Coalescence_BS_CoverImage_5x4_aspect.png" alt="hello world">
+									<div class="project" style="background-color: #ededed;">
+										<a href="https://github.com/Sephta/time-series-modeling">
+											<img src="./imgs/time_series_icon.png" alt="hello world">
 											<div class="middle">
 												<div class="text">
-													<h3 class="text-alignment-center text-pad-bottom">Coalescence: <br> Battle System</h3> <hr> <br>
-													<span><p>Submission to the Ludum Dare 47 Game Jam.</p></span> <br>
-													<span class="text-highlight">Oct 2020</span>
+													<h3 class="text-alignment-center text-pad-bottom">Transformation Trees</h3> <hr> <br>
+													<span><p>Time Series Modeling library written in python. <a style="color: #4242ff; text-decoration: underline;" href="https://pypi.org/project/transformation-tree/">PyPi</a> </p></span> <br>
+													<span class="text-highlight">Q1 2021 , Python</span>
 												</div>
 											</div>
 										</a>
 									</div>
-									<div class="project">
-										<a href="https://sephta.itch.io/coalescence">
-											<img src="./imgs/Coalescence_CoverImage_5x4_aspect.png" alt="hello world">
+									<div class="project" style="background-color: #1b212c;">
+										<a href="https://github.com/5-Bits-in-a-Byte/message-board">
+											<img src="./imgs/Inquire ICON - Dark Theme.png" alt="hello world">
 											<div class="middle">
 												<div class="text">
-													<h3 class="text-alignment-center text-pad-bottom">Coalescence</h3> <hr> <br>
-													<span><p>Submission to the Vimjam Game Jam.</p></span> <br>
-													<span class="text-highlight">Sept 2020</span>
+													<h3 class="text-alignment-center text-pad-bottom">Inquire</h3> <hr> <br>
+													<span><p>Message-board webapp built for Instructors and students.</p></span> <br>
+													<span class="text-highlight">2021 , ReactJS + Flask + MongoDB</span>
 												</div>
 											</div>
 										</a>
 									</div>
-									<div class="project">
+									<div class="project" style="background-color: #292929;">
 										<a href="https://sephta.itch.io/project-evermorn">
-											<img src="./imgs/Project_EverMorn.png" alt="hello world">
+											<img src="./imgs/Unity.png" alt="hello world">
 											<div class="middle">
 												<div class="text">
 													<h3 class="text-alignment-center text-pad-bottom">3D Action RPG </h3> <hr> <br>
 													<span><p>School project @ University of Oregon</p></span> <br>
-													<span class="text-highlight">Apr 2020</span>
+													<span class="text-highlight">Q2 2020 , Unity + C# </span>
 												</div>
 											</div>
 										</a>
@@ -153,19 +153,19 @@
 												<div class="text">
 													<h3 class="text-alignment-center text-pad-bottom">Website Source Code</h3> <hr>	<br>
 													<span><p>Source code for this website is public and available on my github.</p></span> <br>
-													<span class="text-highlight">Dec 2019</span>
+													<span class="text-highlight">Dec 2019 , HTML + CSS</span>
 												</div>
 											</div>
 										</a>
 									</div>
 									<div class="project">
-										<a href="#">
-											<img src="./imgs/Coming-Soon-Text.png" alt="hello world">
+										<a href="https://github.com/alexmarozick/DarkWebCrawler">
+											<img src="./imgs/deepweb.png" alt="hello world">
 											<div class="middle">
 												<div class="text">
-													<h3 class="text-alignment-center text-pad-bottom">Work in Progress</h3> <hr> <br>
-													<span> <p>This will soon link to another project I am working on.</p> </span> <br>
-													<span class="text-highlight">TBD</span>
+													<h3 class="text-alignment-center text-pad-bottom">Dark Web Scraper</h3> <hr> <br>
+													<span> <p>School project where I built a Web Scraper to grab data from the TOR network.</p> </span> <br>
+													<span class="text-highlight">Q1 2021, C# + .NET</span>
 												</div>
 											</div>
 										</a>
